# Make-Readme

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Make-Docker.ps1  Make-Readme.ps1  README.md  setup-docker.ps1  setup.ps1
gerador_readme/: Cargo.toml
gerador_readme/src/: main.rs
